--- a/ssc-brewery/src/main/resources/application.properties
+++ b/ssc-brewery/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.data.jpa.repositories.bootstrap-mode=default
 #spring.security.user.password=guru
 
 # uncomment to show sql
-spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
 # pretty format SQL
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 # show bind parameters
-logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql=trace
